--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,15 @@
 DEBUG = true
+
+# development/production database
+DB_HOST = xxx
+DB_USER = xxx
+DB_PASS = xxx
+DB_PORT = xxx
+DB_NAME = xxx
+
+# test database
+TEST_DB_USER = xxx
+TEST_DB_PASS = xxx
+TEST_DB_NAME = xxx
+TEST_DB_HOST = xxx
+TEST_DB_PORT = xxx
