--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "build": "tsc -p tsconfig.build.json",
     "start": "ts-node -r tsconfig-paths/register src/server.ts",
     "start:dev": "concurrently --handle-input \"wait-on dist/server.js && nodemon\" \"tsc -w -p tsconfig.build.json\" ",
-    "prestart:prod": "rimraf dist && npm run build",
+    "rebuild": "rimraf dist && npm run build",
+    "prestart:prod": "npm run rebuild",
     "start:prod": "link-module-alias && node dist/server.js",
-    "lint": "tslint -p tsconfig.json -c tslint.json"
+    "lint": "tslint -p tsconfig.json -c tslint.json",
+    "db:migrate": "npm run rebuild && link-module-alias && sequelize db:migrate",
+    "db:reset": "npm run rebuild && link-module-alias && sequelize db:migrate:undo:all"
   },
   "_moduleAliases": {
     "src": "dist"
@@ -26,8 +29,11 @@
     "http": "0.0.0",
     "jsonwebtoken": "^8.5.1",
     "link-module-alias": "^1.2.0",
+    "pg": "^7.18.2",
+    "pg-hstore": "^2.3.3",
     "rimraf": "2.6.3",
     "rxjs": "6.5.2",
+    "sequelize": "^5.21.5",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -35,6 +41,7 @@
     "@types/node": "12.6.8",
     "concurrently": "4.1.1",
     "nodemon": "1.19.1",
+    "sequelize-cli": "^5.5.1",
     "ts-node": "8.3.0",
     "tsconfig-paths": "3.8.0",
     "tslint": "5.18.0",
