--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   },
   "dependencies": {
     "@types/dotenv": "^6.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "http": "0.0.0",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "link-module-alias": "^1.2.0",
     "pg": "^7.18.2",
